--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
-  <title>Vòng quay may mắn</title>
+  <title>Vòng quay may mắn1 clone</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
