--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           <div id="wheel">
             <img id="wheel-check" src="imgs/img_vongquay.png" alt="Vòng quay">
             <a href="#" id="turn-btn">
-              <img id="turn-img" src="imgs/btn_quay.png" alt="Quay">
+              <img id="turn-img" src="imgs/btn_quay.png" alt="Spin">
             </a>
           </div>
         </div>
